--- a/BrowseQuest.csproj
+++ b/BrowseQuest.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Controls\EntityControl.Designer.cs">
       <DependentUpon>EntityControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Game.cs" />
     <Compile Include="EntityManager.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -236,6 +237,9 @@
     <Content Include="Content\Data\classes.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Content\Data\player.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
